# GLRender

./: .gitignore  CMakeLists.txt  CompMeshRender.hpp  README.md  build.bat  main.cpp  test.txt
3rd/Assimp/lib/: assimp-vc120-mt.lib
3rd/Lua/lib/: lua5.1.2013.lib  lua5.1.lib
3rd/Sqlite3/lib/: sqlite3.lib
3rd/TcMalloc/lib/: libtcmalloc_minimal-debug.lib
3rd/kazmath/include/: utility.h
3rd/kazmath/lib/: kazmath.lib  kazmath13.lib
ResourceSystem/: FileSystem.h  ResourceManager.cpp  ResourceManager.h
component/: CompCamera.cpp  CompCamera.hpp  CompMeshRender.hpp
core/: CMakeLists.txt
core/include/: Base.hpp  Camera.hpp  Common.hpp  Component.hpp  Material.hpp  MemeryManager.hpp  Mesh.hpp  Model.hpp  RenderEngine.hpp  SceneManager.hpp  SceneObject.hpp  ShaderProgram.hpp  Time.cpp  Time.h  VAO.hpp  time.hpp
core/src/: App.cpp  App.h  App.hpp  Camera.cpp  Common.hpp  Component.cpp  Component.h  DB.h  Device.hpp  Log.cpp  Logic.cpp  Logic.h  Material.cpp  Material.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Model.cpp  Model.h  RenderCommand.cpp  RenderCommand.h  RenderEngine.cpp  RenderEngine.h  RenderEngine.hpp  SceneManager.cpp  SceneManager.h  SceneManager.hpp  SceneObject.cpp  SceneObject.h  SceneObject.hpp  ScriptEngine.cpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.h  VBO.cpp  VBO.h  VBO.hpp  (+2 more)
sln/: Config.lua  GLRender.VC.db  GLRender.sln  GLRender.vcxproj  GLRender.vcxproj.filters  README.txt
sln/Assets/: line.mtl  line.shader  normal.shader  shadow_map.shader  vert.txt
sln/Debug/: vc140.idb
src/: 临时代码保存.cpp
src/Component/: CompCamera.cpp  CompCamera.h  CompCamera.hpp  CompLight.cpp  CompLight.h  CompMeshRender.hpp
src/Core/: App.cpp  App.h  Camera.cpp  Camera.h  Common.h  Component.cpp  Component.h  DB.cpp  DB.h  Device.h  Font.cpp  Font.h  Light.cpp  Light.h  Log.h  Logic.cpp  Logic.h  Material.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  RenderEngine.cpp  RenderEngine.h  RenderTarget.h  Renderable.h  Renderable.hpp  SceneManager.h  SceneObject.cpp  SceneObject.h  Script.cpp  ScriptEngine.cpp  ScriptEngine.h  ShaderProgram.cpp  ShaderProgram.hpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp
src/LuaPort/: LuaPort.h  lua_Student.cpp
src/ResourceSystem/: Material.cpp  Material.h  Model.cpp  ResItem.h  ResourceManager.cpp  ResourceManager.h  Script.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Utility/: Base.hpp  FileSystem.h  GCObject.h  Json.h  Time.h  WorkQueue.h
(+10 files in other folders)
